<?xml version="1.0" encoding="utf-8"?>
<layout >
    <data>
        <variable
            name="clickHandler"
            type="com.sid.demoapp.provider.ClickHandler"/>
    </data>
    <RelativeLayout
        android:id="@+id/activity_data_provider"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.sid.demoapp.provider.DataProviderActivity">

        <EditText
            android:id="@+id/data_entry"
            android:ems="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/action_data_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/data_entry"
            android:drawableLeft="@android:drawable/ic_input_add"/>

        <Button
            android:id="@+id/action_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/action_data_submit"
            android:layout_toRightOf="@+id/action_data_submit"
            android:drawableLeft="@android:drawable/ic_delete"/>

        <Button
            android:id="@+id/action_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/action_delete"
            android:layout_toRightOf="@+id/action_delete"
            android:drawableLeft="@android:drawable/ic_menu_search"/>

        <ListView
            android:id="@+id/data_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/action_data_submit">
        </ListView>
    </RelativeLayout>
</layout>