<?xml version="1.0" encoding="utf-8"?>
<androidx.recyclerview.widget.RecyclerView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_list"
    android:name="com.sid.demoapp.MainMenuFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:background="@drawable/rounded_corners"
    app:layoutManager="LinearLayoutManager"
    tools:context="com.sid.demoapp.menu.MainMenuFragment"
    tools:listitem="@layout/fragment_mainmenu_item"/>
